--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
     <h3><a href="./public/birthday-invite.html">Birth Invite Project</a></h3>
     <img src="./assets/images/b-day.png" alt="Birth day" height="200" />
     <hr />
+    <h3>
+      <a href="../Capstone Project 1-Online Resume/resume.html">My Resume</a>
+    </h3>
+    <hr />
     <a href="./public/about.html">About me</a>
     <a href="./public/contact.html">Contact Me</a>
+    <hr />
+    <footer>@ Raj Kolte. All right reserved.</footer>
   </body>
 </html>
