--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <img src="./assets/images/b-day.png" alt="Birth day" height="200" />
     <hr />
     <h3>
-      <a href="../Capstone Project 1-Online Resume/resume.html">My Resume</a>
+      <a href="./resume.html">My Resume</a>
     </h3>
     <hr />
     <a href="./public/about.html">About me</a>
